@@ -12,11 +12,13 @@ t/01_basic.t
 t/02_basic.t
 t/03_noconf.t
 t/04_moose_constr.t
+t/05_cache.t
 t/pod.t
 t/pod_coverage.t
 t/testrc
-t/index.tt
 t/perlanetrc
+t/cacherc
+t/index.tt
 README
 Changes
 t/data/davblog.xml
